@@ -1,3 +1,7 @@
+2001-08-13  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* General.pm: deg2rad and rad2deg
+
 2001-08-09  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Recipe.pm (read_recipe): Deal with ambiguity for recipes too
